--- a/index.html
+++ b/index.html
@@ -42,23 +42,42 @@
     <div class="image">
         <span id="wlc">Welcome to My OMTR Site <br>Feel Free to Book</span>
     </div>
+    <span class="head">Popular Shows:</span>
+    <div class="shows">
+        <span title="Breate!!">
+            <img src="breate.jpg" alt="breate">
+        </span>
+        <span title="friends">
+            <img src="friends.jpg" alt="friends">
+        </span>
+        <span title="Dil Bechara">
+            <img src="dil.jpg" alt="dil bechara">
+        </span>
+        <span title="Breate!!">
+            <img src="breate.jpg" alt="breate">
+        </span>
+        <span title="friends">
+            <img src="friends.jpg" alt="friends">
+        </span>
+        <span title="Dil Bechara">
+            <img src="dil.jpg" alt="dil bechara">
+        </span>
+        <span title="Breate!!">
+            <img src="breate.jpg" alt="breate">
+        </span>
+        <span title="friends">
+            <img src="friends.jpg" alt="friends">
+        </span>
+    </div>
+    <footer>
+        <div class="end">
+            <span id="copy">
+                Sorry,No&copy; Reserved. <br>
+                Thank You so much for Spending your valuable time
+            </span>
 
-
-    
-    <!-- <div class="movie">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/9xMNTO-hUXI" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/LYSDn6_h50c" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/TPnNdAb5_Sg" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ULEQb_l-N08" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </div> -->
+        </div>
+    </footer>
 </body>
 
 </html>
