--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -44,30 +46,26 @@
     </div>
     <span class="head">Popular Shows:</span>
     <div class="shows">
-        <span title="Breate!!">
-            <img src="breate.jpg" alt="breate">
-        </span>
-        <span title="friends">
-            <img src="friends.jpg" alt="friends">
-        </span>
-        <span title="Dil Bechara">
-            <img src="dil.jpg" alt="dil bechara">
-        </span>
-        <span title="Breate!!">
-            <img src="breate.jpg" alt="breate">
-        </span>
-        <span title="friends">
-            <img src="friends.jpg" alt="friends">
-        </span>
-        <span title="Dil Bechara">
-            <img src="dil.jpg" alt="dil bechara">
-        </span>
-        <span title="Breate!!">
-            <img src="breate.jpg" alt="breate">
-        </span>
-        <span title="friends">
-            <img src="friends.jpg" alt="friends">
-        </span>
+        <div class="movie" id="m1">
+            <div class="name">
+                FRIENDS
+            </div>
+        </div>
+        <div class="movie" id="m2">
+            <div class="name">
+                Breate
+            </div>
+        </div>
+        <div class="movie" id="m3">
+            <div class="name">
+                Dil Bechara
+            </div>
+        </div>
+        <div class="movie" id="m4">
+            <div class="name">
+                Yeh Jawani hey Diwani
+            </div>
+        </div>
     </div>
     <footer>
         <div class="end">
